--- a/AnalyticStructure_main.tex
+++ b/AnalyticStructure_main.tex
@@ -399,15 +399,19 @@ with:%here in this case the source term contains further addend apart from the u
 \be
 \ket{s_p^\Phi(\omega)} =  \op V\ket{f_p^\Phi(\omega)} + \op Q_0(\op V'(\omega) + \op \Phi(\omega))\ket{\psi_p} \;.\nn
 \ee
-As a stringent hypothesis, 
-let us now assume that the operator $\op Q_0(\op V'(\omega) + \op \Phi(\omega))$ is, line $\op V$ nonzero on a bounded real-space domain.
+As a \emph{stringent} hypothesis, 
+let us now assume that the operator $\op Q_0(\op V'(\omega) + \op \Phi(\omega))$ is, like $\op V$, localized, i.e. nonzero \emph{only}
+on a bounded real-space domain.
 %The localization character of fluctuation states can be assessed by following the same argument discussed in section \ref{SEopenSystem} for the eigenstates of the SE. In this case 
 %the source term depends also from the perturbation added to the system so this analysis applies only to the class 
 %of perturbing field for which $\ket{\op\Phi\psi_p}$ is localized, when projected
-%in the $\r$-representation. 
-It emerges that, for each choice of $p$, the value $\omega = |\eps_p|$ represents the threshold level that govern the localization properties of the corresponding 
-fluctuation state. For $\omega > |\eps_p|$,  the Helmholtz kernel behaves as a spherical wave and  gives raise to a $f_p(\omega,\r)$ delocalized in the whole accessible space,
-whereas for $\omega < |\eps_p|$ the kernel contains an exponential damping factor and $f_p(\omega,\r)$ exhibit a bound-state behavior in the long range.   
+  %in the $\r$-representation. 
+It can be seen that for each choice of $p$, the value $\omega = |\eps_p|$ represents the threshold level 
+that govern the localization properties of the corresponding 
+fluctuation state. Even when the above locality argument holds true, for $\omega > |\eps_p|$, 
+the Helmholtz kernel behaves as a spherical wave and  gives raise to a $f_p(\omega,\r)$ which is \emph{delocalized} in the whole accessible space.
+Only for $\omega < |\eps_p|$ the kernel contains an exponential damping factor and $f_p(\omega,\r)$ \emph{may} 
+exhibit a bound-state behavior in the long range, once again provided that the above locality arguments on $\op V'$ and $\Phi$ are valid.
 
 A direct confirmation of the localization character of fluctuation states at $\omega=0$ can be achieved through a ground-state calculation. Indeed, $\ket{f_p(\omega)}$ are nothing but the 
 perturbed KS eigenstates projected out from the domain of $\dmnot$, so for a constant perturbation $\op\Phi_s$ it turns out that $\ket{f_p(0)} = \op Q_0\ket{\psi_p^{\Phi_s}}$. The perturbed KS 
